[package]
name = "vulkt"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[dependencies]
ahash = "0.8"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
glam = "0.27"
smallvec = { version = "1", features = ["union", "const_generics", "const_new"] }
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
vulkano = "0.34"
vulkano-shaders = "0.34"
winit = "0.28"
